Added the main HTML elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>👙 SWIMWEAR</title>
   </head>
-  <body></body>
+  <body>
+    <h1>I 🧡 SWIMWEAR</h1>
+    <h2>Especially Swimwear Design</h2>
+    <img src="images/swimsuits.jpeg" alt="swimsuits" width="300" />
+    <p>
+      A swimsuit is an item of clothing designed to be worn by people engaging
+      in a water-based activity or water sports, such as swimming, diving and
+      surfing, or sun-orientated activities, such as sun bathing. Different
+      types may be worn by men, women, and children. A swimsuit can be described
+      by various names, some of which are used only in particular locations,
+      including swimwear, bathing suit, swimming costume, bathing costume,
+      swimming suit, swimmers, swimming togs, bathers, cossie (short for
+      "costume"), or swimming trunks for men, besides others.
+      <br />
+      <a href="https://en.wikipedia.org/wiki/Swimsuit" target="_blank"
+        >Learn more on Wikipedia</a
+      >
+    </p>
+    <button>BUY SWIMWEAR</button>
+    This page was built by Aleksandra Jablonska and is open-sourced on
+    <a href="https://github.com/aleksandra-gab/bikinis" target="_blank"
+      >GitHub</a
+    >.
+  </body>
 </html>
